# ml_from_scratch

./: .gitignore  CMakeLists.txt  LICENSE  README.md
CNN_CIFAR10/python/: dataset.py  model.py  train.py
MNIST_MLP/cpp/include/: dataset.h  model.h
MNIST_MLP/cpp/src/: activation.cpp
MNIST_MLP/python/: exceptions.py  model.py  train.py
mnist_imp/cpp/include/: activation.h  dataset.h  exception.h  model.h
mnist_imp/cpp/src/: activation.cpp  dataset.cpp  exception.cpp  main.cpp  model.cpp  plot.cpp.py
mnist_imp/python/: README.md  activation.py  dataset.py  model.py  train.py
